<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Score"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/bestScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BestScore"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/scoreText"
        app:layout_constraintStart_toStartOf="@id/scoreText"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/openMenuButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="Menu"
        android:backgroundTint="@color/orange"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




    <GridLayout
        android:id="@+id/grid2048"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="25dp"
        android:columnCount="4"
        android:rowCount="4"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/scoreText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <LinearLayout
        android:id="@+id/menuOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#AA000000"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/grid2048"
        app:layout_constraintBottom_toBottomOf="@id/grid2048"
        app:layout_constraintStart_toStartOf="@id/grid2048"
        app:layout_constraintEnd_toEndOf="@id/grid2048">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resumeButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Resume"
            android:backgroundTint="@color/orange"
            app:cornerRadius="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainMenuButton"
            android:layout_width="200dp"
            android:layout_marginTop="60dp"
            android:layout_height="wrap_content"
            android:text="@string/BackToMenu"
            android:backgroundTint="@color/orange"
            app:cornerRadius="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameOverOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#AA000000"
        android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Game Over"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainMenuButton_second"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/MainMenu"
                android:backgroundTint="@color/orange"
                app:cornerRadius="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/restartButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/RestartButton"
                android:backgroundTint="@color/orange"
                app:cornerRadius="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameWinOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#AA000000"
        android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You Win!"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainMenuButton_third"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/MainMenu"
                android:backgroundTint="@color/orange"
                app:cornerRadius="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/restartButton_second"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/RestartButton"
                android:backgroundTint="@color/orange"
                app:cornerRadius="8dp"/>



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
